--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,9 +1,9 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+      <h1 id="homeHeading">Code Raga</h1>
       <hr>
-      <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+      <p>We See things little differently</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
@@ -13,10 +13,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <i class="fa fa-4x fa-users" aria-hidden="true"></i>
+                <h2 class="section-heading" style="padding-top: 5px">Who We Are</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                <p class="text-faded">We are a network of people from all over the world, who want to see progress and improvements in everyone's lives!</p>
             </div>
         </div>
     </div>
