1. Add Portfolio Component 2. Add Animate Js for getting typewritter effect on portfolio 3. Add Views to portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<cr-navbar></cr-navbar>
-<cr-header></cr-header>
-<cr-services></cr-services>
-<cr-contact></cr-contact>
+<router-outlet></router-outlet>
