--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -44,7 +44,7 @@
 <aside class="bg-dark">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Follow Us!</h2>
+      <h2>Follow Me!</h2>
       <ul class="list-inline intro-social-buttons">
         <li>
           <a href="https://twitter.com/_voidzero" target = _blank class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
