--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,7 +7,7 @@
         </a>
       </h1>
       <hr>
-      <a (click)="goTo('services')" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+      <a href="#services" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
 </header>
